Fix spacing under input field

--- a/public/sass/_chat.scss
+++ b/public/sass/_chat.scss
@@ -52,6 +52,7 @@ nav.bar {
 }
 
 form.input {
+  background: $sidebarBackground;
   position: fixed;
   bottom: 0;
   left: -$bodyGutter;
